...
      let xPosition = menuShow.size.width * 0.1
      let yPosition = menuShow.size.width * 0.1
      menuButton = UIButton(frame: CGRect(x: xPosition, y: yPosition, width: menuShow.size.width, height: menuShow.size.height))
      menuButton.setImage(menuShow, forState: UIControlState.Normal)
      menuButton.setImage(menuHide, forState: UIControlState.Selected)
      
      menuButton.accessibilityIdentifier = "MenuButton"
      
      buttonLayer.addSubview(menuButton)
      
      menuButton.addTarget(self, action: #selector(menuButtonPress), forControlEvents: UIControlEvents.TouchDown)
      menuButton.addTarget(self, action: #selector(menuButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      menuButton.addTarget(self, action: #selector(menuButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
      facebookButton = UIButton(frame: CGRect(x: xPosition, y: yPosition, width: image.size.width, height: image.size.height))
      facebookButton.setImage(image, forState: UIControlState.Normal)
      
      facebookButton.layer.opacity = 0
      facebookButton.userInteractionEnabled = false
      
      facebookButton.accessibilityIdentifier = "FacebookButton"
      
      buttonLayer.addSubview(facebookButton)
      
      facebookButton.addTarget(self, action: #selector(facebookButtonPress), forControlEvents: UIControlEvents.TouchDown)
      facebookButton.addTarget(self, action: #selector(facebookButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      facebookButton.addTarget(self, action: #selector(facebookButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
      twitterButton = UIButton(frame: CGRect(x: xPosition, y: yPosition, width: image.size.width, height: image.size.height))
      twitterButton.setImage(image, forState: UIControlState.Normal)
      
      twitterButton.layer.opacity = 0
      twitterButton.userInteractionEnabled = false
      
      twitterButton.accessibilityIdentifier = "TwitterButton"
      
      buttonLayer.addSubview(twitterButton)
      
      twitterButton.addTarget(self, action: #selector(twitterButtonPress), forControlEvents: UIControlEvents.TouchDown)
      twitterButton.addTarget(self, action: #selector(twitterButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      twitterButton.addTarget(self, action: #selector(twitterButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
      creditsButton = UIButton(frame: CGRect(x: xPosition, y: yPosition, width: image.size.width, height: image.size.height))
      creditsButton.setImage(image, forState: UIControlState.Normal)
      
      creditsButton.layer.opacity = 0
      creditsButton.userInteractionEnabled = false
      
      creditsButton.accessibilityIdentifier = "CreditsButton"
      
      buttonLayer.addSubview(creditsButton)
      
      creditsButton.addTarget(self, action: #selector(creditsButtonPress), forControlEvents: UIControlEvents.TouchDown)
      creditsButton.addTarget(self, action: #selector(creditsButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      creditsButton.addTarget(self, action: #selector(creditsButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
      rateButton = UIButton(frame: CGRect(x: xPosition, y: yPosition, width: image.size.width, height: image.size.height))
      rateButton.setImage(image, forState: UIControlState.Normal)
      
      rateButton.layer.opacity = 0
      rateButton.userInteractionEnabled = false
      
      rateButton.accessibilityIdentifier = "RateButton"
      
      buttonLayer.addSubview(rateButton)
      
      rateButton.addTarget(self, action: #selector(rateButtonPress), forControlEvents: UIControlEvents.TouchDown)
      rateButton.addTarget(self, action: #selector(rateButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      rateButton.addTarget(self, action: #selector(rateButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
        soundButton.selected = delegate.soundButtonSelected
      }
      
      soundButton.layer.opacity = 0
      soundButton.userInteractionEnabled = false
      
      soundButton.accessibilityIdentifier = "SoundButton"
      
      buttonLayer.addSubview(soundButton)
      
      soundButton.addTarget(self, action: #selector(soundButtonPress), forControlEvents: UIControlEvents.TouchDown)
      soundButton.addTarget(self, action: #selector(soundButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      soundButton.addTarget(self, action: #selector(soundButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
      settingsButton = UIButton(frame: CGRect(x: xPosition, y: yPosition, width: image.size.width, height: image.size.height))
      settingsButton.setImage(image, forState: UIControlState.Normal)
      
      settingsButton.layer.opacity = 0
      settingsButton.userInteractionEnabled = false
      
      settingsButton.accessibilityIdentifier = "SettingsButton"
      
      buttonLayer.addSubview(settingsButton)
      
      settingsButton.addTarget(self, action: #selector(settingsButtonPress), forControlEvents: UIControlEvents.TouchDown)
      settingsButton.addTarget(self, action: #selector(settingsButtonRelease), forControlEvents: UIControlEvents.TouchUpInside)
      settingsButton.addTarget(self, action: #selector(settingsButtonRelease), forControlEvents: UIControlEvents.TouchUpOutside)
...
