...
    
    authorLabel.adjustsFontSizeToFitWidth = true
    authorLabel.minimumScaleFactor = 0.2
    
    addSubview(authorLabel)
    
    haikuLabel.text = "Swipe"
    authorLabel.text = ""
  }
  
}

// MARK: Scrolling
...
